Split out os handlers to their own library
The circular dependency between the gensio and gensiomdns library was
going to cause problems in the future.  Since gensiomdns only depended
on os handling, and os handling is really a separate thing, anyway,
split it out.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/examples/Makefile.am
+++ b/c++/examples/Makefile.am
@@ -5,16 +5,21 @@ noinst_PROGRAMS = telnet_server telnet_client mdns
 
 telnet_server_SOURCES = telnet_server.cc
 
-telnet_server_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/lib/libgensiocpp.la
+telnet_server_LDADD = $(top_builddir)/c++/lib/libgensiooshcpp.la \
+	$(top_builddir)/c++/lib/libgensiocpp.la \
+	$(top_builddir)/lib/libgensioosh.la \
+	$(top_builddir)/lib/libgensio.la
 
 telnet_client_SOURCES = telnet_client.cc
 
-telnet_client_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/lib/libgensiocpp.la
+telnet_client_LDADD = $(top_builddir)/c++/lib/libgensiooshcpp.la \
+	$(top_builddir)/lib/libgensioosh.la \
+	$(top_builddir)/c++/lib/libgensiocpp.la \
+	$(top_builddir)/lib/libgensio.la
 
 mdns_SOURCES = mdns.cc
 
-mdns_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/lib/libgensiocpp.la \
-	$(top_builddir)/c++/lib/libgensiomdnscpp.la
+mdns_LDADD = $(top_builddir)/c++/lib/libgensiooshcpp.la \
+	$(top_builddir)/c++/lib/libgensiomdnscpp.la \
+	$(top_builddir)/lib/libgensio.la \
+	$(top_builddir)/lib/libgensioosh.la
