--- a/c++/swig/go/tests/Makefile.am
+++ b/c++/swig/go/tests/Makefile.am
@@ -54,8 +54,9 @@ endif
 export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS)
 export CGO_CPPFLAGS = $(CPPFLAGS)
 export CGO_LDFLAGS = -L$(top_builddir)/c++/lib/.libs \
-	-lgensiocpp -lgensiomdnscpp \
-	-L$(top_builddir)/lib/.libs -lgensio -lgensiomdns $(MORE_LIBS)
+	-lgensiooshcpp -lgensiocpp -lgensiomdnscpp \
+	-L$(top_builddir)/lib/.libs -lgensioosh -lgensio -lgensiomdns \
+	$(MORE_LIBS)
 
 test_basic: ../gensio/gensio.go \
 		../gensio/gensio_wrap.cxx \
