--- a/glib/c++/tests/Makefile.am
+++ b/glib/c++/tests/Makefile.am
@@ -8,7 +8,9 @@ basic_glib_test_SOURCES = basic_glib_test.cc
 
 basic_glib_test_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(top_builddir)/c++/lib/libgensiocpp.la \
+	$(top_builddir)/c++/lib/libgensiooshcpp.la \
 	$(top_builddir)/lib/libgensio.la \
+	$(top_builddir)/lib/libgensioosh.la \
 	$(top_builddir)/glib/libgensioglib.la \
 	$(OPENSSL_LIBS)
 
