--- a/lib/libgensio.pc.in
+++ b/lib/libgensio.pc.in
@@ -6,4 +6,4 @@ includedir=@includedir@
 Name: libgensio
 Description: A library to abstract stream I/O like serial port, TCP, telnet, UDP, SSL, IPMI SOL, etc.
 Version: @VERSION@
-Libs: -L${libdir} -lgensio @LIBS@
+Libs: -L${libdir} -lgensioosh -lgensio @BUILTIN_MDNS_LIBS@ @LIBS@
