--- a/tcl/c++/tests/Makefile.am
+++ b/tcl/c++/tests/Makefile.am
@@ -8,7 +8,9 @@ basic_tcl_test_SOURCES = basic_tcl_test.cc
 
 basic_tcl_test_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(top_builddir)/c++/lib/libgensiocpp.la \
+	$(top_builddir)/c++/lib/libgensiooshcpp.la \
 	$(top_builddir)/lib/libgensio.la \
+	$(top_builddir)/lib/libgensioosh.la \
 	$(top_builddir)/tcl/libgensiotcl.la \
 	$(TCL_LIBS) $(OPENSSL_LIBS)
 
