--- a/configure.ac
+++ b/configure.ac
@@ -1700,6 +1700,7 @@ AC_CHECK_FUNCS(isatty)
 AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(strncasecmp)
 AC_CHECK_FUNCS(prctl)
+AC_CHECK_FUNCS(setutxent)
 
 AC_CHECK_DECLS([SIGWINCH], [], [], [#include <signal.h>])
 
