configure: Don't set --enable-new-dtags for the run
Only set it for LT_INIT.  If it's set when compiling, it will force
shared libraries, breaking --disable-shared.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -16,10 +16,12 @@ AM_PROG_AR
 # LD_LIBRARY_PATH if RPATH is used, but the code uses LD_LIBRARY_PATH
 # as a way to find module object files.  So this is a hack until a
 # workaround is available.
+OLD_LDFLAGS="$LDFLAGS"
 if uname -a | grep '^Linux' >/dev/null 2>/dev/null; then
-  LDFLAGS="$LDFLAGS -Wl,--enable-new-dtags"
+   LDFLAGS="$LDFLAGS -Wl,--enable-new-dtags"
 fi
 LT_INIT(dlopen)
+LDFLAGS="$OLD_LDFLAGS"
 
 # defaults
 AM_CFLAGS=
