--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -10,8 +10,8 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h \
 	gensio_filter_relpkt.h gensio_filter_trace.h gensio_filter_perf.h \
 	errtrig.h avahi_watcher.h gensio_net.h gensio_filter_kiss.h \
 	gensio_filter_xlt.h gensio_filter_script.h \
-	gensio_ll_sound.h alsa_sound.h file_sound.h gensio_filter_ratelimit.h \
-	gensio_filter_afskmdm.h
+	gensio_ll_sound.h alsa_sound.h win_sound.h file_sound.h \
+	gensio_filter_ratelimit.h gensio_filter_afskmdm.h
 
 libgensioosh_la_SOURCES = \
 	gensio_osops.c gensio_circbuf.c gensio_osops_env.c gensio_addrinfo.c \
