win: Fix PTYs started on other users under Windows
Windows PTYs have an issue where if the PTY is created at a higher
integrity level than the program using the console, that program cannot
do "wrong way verb" operations like WriteConsoleInput().  Unfortunately,
MSYS2 does WriteConsoleInput, and this breaks things.

Solve this by creating a helper program.  When a PTY is created and
an impersonation token is present, don't create the PTY in the main
program, instead create a helper program that will create the PTY and do
the I/O to the console.  The main program will talk to the helper
program over stdio and a special control pipe it creates.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1689,15 +1689,18 @@ AC_CHECK_HEADER(sys/un.h, [HAVE_UNIX=1] )
 AC_SUBST(HAVE_UNIX)
 AC_DEFINE_UNQUOTED([HAVE_UNIX], [$HAVE_UNIX], [Enable unix socket handling])
 
+GENSIO_PTY_HELPER=
 if test "$version_type" = "windows"; then
    # We have PTY support for windows.
    HAVE_PTY=1
+   GENSIO_PTY_HELPER="gensio_pty_helper\$(EXEEXT)"
 else
    HAVE_PTY=0
    AC_CHECK_FUNCS(posix_openpt, [HAVE_PTY=1])
 fi
 AC_SUBST(HAVE_PTY)
 AC_DEFINE_UNQUOTED([HAVE_PTY], [$HAVE_PTY], [Enable PTY gensio])
+AC_SUBST(GENSIO_PTY_HELPER)
 
 AM_CONDITIONAL([HAVE_UNIX_OS], [test ${system_type} != windows])
 AM_CONDITIONAL([HAVE_WINDOWS_OS], [test ${system_type} = windows])
