--- a/configure.ac
+++ b/configure.ac
@@ -1738,6 +1738,7 @@ AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(strncasecmp)
 AC_CHECK_FUNCS(prctl)
 AC_CHECK_FUNCS(setutxent)
+AC_CHECK_FUNCS(sigtimedwait)
 
 AC_CHECK_DECLS([SIGWINCH], [], [], [#include <signal.h>])
 
