glib|tcl:swig:python: Get rid of $< in makesfiles
It only works in macros on some make programs.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/swig/python/Makefile.am
+++ b/glib/swig/python/Makefile.am
@@ -12,7 +12,8 @@ pythonlib_LTLIBRARIES = _gensioglib.la
 
 gensioglib_wrap.c gensioglib.py: $(top_srcdir)/glib/swig/gensioglib.i
 	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o gensioglib_wrap.c \
-		-I$(top_srcdir)/include -I$(top_srcdir)/swig/include $<
+		-I$(top_srcdir)/include -I$(top_srcdir)/swig/include \
+		$(top_srcdir)/glib/swig/gensioglib.i
 
 nodist__gensioglib_la_SOURCES = gensioglib_wrap.c
 _gensioglib_la_LIBADD = $(top_builddir)/glib/libgensioglib.la \
