--- a/tcl/swig/python/Makefile.am
+++ b/tcl/swig/python/Makefile.am
@@ -12,7 +12,8 @@ pythonlib_LTLIBRARIES = _gensiotcl.la
 
 gensiotcl_wrap.c gensiotcl.py: $(top_srcdir)/tcl/swig/gensiotcl.i
 	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o gensiotcl_wrap.c \
-		-I$(top_srcdir)/include -I$(top_srcdir)/swig/include $<
+		-I$(top_srcdir)/include -I$(top_srcdir)/swig/include \
+		$(top_srcdir)/tcl/swig/gensiotcl.i
 
 nodist__gensiotcl_la_SOURCES = gensiotcl_wrap.c
 _gensiotcl_la_LIBADD = $(top_builddir)/tcl/libgensiotcl.la \
