c++:swig:go: Fix in-tree compile
Go was picking up things from the in-tree compile.  Name things so go
doesn't pick them up automatically and fix all the fallout.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/swig/go/Makefile.am
+++ b/c++/swig/go/Makefile.am
@@ -8,7 +8,8 @@ GOLANG_INSTALLDIR = /personal/git/go/gensio
 
 golang-install:
 	cp $(srcdir)/README.rst $(GOLANG_INSTALLDIR)
-	cp $(srcdir)/gensio/gensio.swigcxx $(GOLANG_INSTALLDIR)
-	cp $(srcdir)/gensio/srcgensioapi.go $(GOLANG_INSTALLDIR)/gensioapi.go
-	cp $(srcdir)/gensio/srcgo.mod $(GOLANG_INSTALLDIR)/go.mod
+	cp $(srcdir)/gensio/gensio.srcswigcxx \
+		$(GOLANG_INSTALLDIR)/gensio.swigcxx
+	cp $(srcdir)/gensio/gensioapi.srcgo $(GOLANG_INSTALLDIR)/gensioapi.go
+	cp $(srcdir)/gensio/go.srcmod $(GOLANG_INSTALLDIR)/go.mod
 	cp $(srcdir)/../include/gensio_base.i $(GOLANG_INSTALLDIR)
